force-app/zurich-base/main/default/objects/KPI__c/fields/AccidentRate__c.field-meta.xml
<CustomField>
    <fullName>AccidentRate__c</fullName>
    <description>Dato procedente de la integración de KPI. Mapeado con la etiqueta ratio_siniestralidad</description>
    <label>Ratio Siniestralidad</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>