force-app/zurich-base/main/default/objects/KPI__c/fields/APES__c.field-meta.xml
<CustomField>
    <fullName>APES__c</fullName>
    <description>Importe APES</description>
    <inlineHelpText>Importe APES</inlineHelpText>
    <label>APES</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>