force-app/zurich-base/main/default/objects/KPI__c/fields/APESpa__c.field-meta.xml
<CustomField>
    <fullName>APESpa__c</fullName>
    <description>Importe APES (pa)</description>
    <inlineHelpText>Importe APES (pa)</inlineHelpText>
    <label>APES (pa)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>