force-app/zurich-base/main/default/objects/KPI__c/fields/CalcYear__c.field-meta.xml
<CustomField>
    <fullName>CalcYear__c</fullName>
    <description>Año en el que se realizan los cálculos</description>
    <inlineHelpText>Año en el que se realizan los cálculos</inlineHelpText>
    <label>Año Cálculo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>