force-app/zurich-base/main/default/objects/KPI__c/fields/Cancellations__c.field-meta.xml
<CustomField>
    <fullName>Cancellations__c</fullName>
    <description>Prima anulaciones</description>
    <inlineHelpText>Prima anulaciones</inlineHelpText>
    <label>Anulaciones</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>