force-app/zurich-base/main/default/objects/KPI__c/fields/CAYLoad__c.field-meta.xml
<CustomField>
    <fullName>CAYLoad__c</fullName>
    <description>Carga siniestral CAY</description>
    <inlineHelpText>Carga siniestral CAY</inlineHelpText>
    <label>Carga CAY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>