force-app/zurich-base/main/default/objects/KPI__c/fields/ClaimOcurridosCAY__c.field-meta.xml
<CustomField>
    <fullName>ClaimOcurridosCAY__c</fullName>
    <description>Guarda la información que le llega del campo siniestralidad_carga_ocurridos_cay por la integracion</description>
    <label>Siniestralidad Ocurridos CAY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>