force-app/zurich-base/main/default/objects/KPI__c/fields/ClaimOcurridosCAYLarge__c.field-meta.xml
<CustomField>
    <fullName>ClaimOcurridosCAYLarge__c</fullName>
    <description>Guarda la información que le llega del campo siniestralidad_carga_ocurridos_cay_large por la integracion</description>
    <label>Siniestralidad Ocurridos CAY Large</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>