force-app/zurich-base/main/default/objects/KPI__c/fields/ClaimTotalIncome__c.field-meta.xml
<CustomField>
    <fullName>ClaimTotalIncome__c</fullName>
    <description>Guarda la información que le llega del campo siniestralidad_ingresos_totales por la integracion</description>
    <label>Siniestralidad Ingresos Totales</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>