force-app/zurich-base/main/default/objects/KPI__c/fields/CodIntermediario__c.field-meta.xml
<CustomField>
    <fullName>CodIntermediario__c</fullName>
    <description>Código intermediario activo</description>
    <inlineHelpText>Código intermediario activo</inlineHelpText>
    <label>Código Intermediario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>