force-app/zurich-base/main/default/objects/KPI__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <description>Comisión Total</description>
    <inlineHelpText>Comisión Total</inlineHelpText>
    <label>Comision</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>