force-app/zurich-base/main/default/objects/KPI__c/fields/ConsolidatedRights__c.field-meta.xml
<CustomField>
    <fullName>ConsolidatedRights__c</fullName>
    <description>Importe Derechos consolidados</description>
    <inlineHelpText>Importe Derechos consolidados</inlineHelpText>
    <label>Derechos consolidados</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>