force-app/zurich-base/main/default/objects/KPI__c/fields/EstructuraUnificada__c.field-meta.xml
<CustomField>
    <fullName>EstructuraUnificada__c</fullName>
    <description>Informa la estructura unificada necesaria para los informes.</description>
    <formula>IF ( 
	ISPICKVAL (SegmentoCliente__c , &apos;Particulares&apos;),
	&apos;Particulares&apos;, 
	IF 
	(
		ISPICKVAL (SegmentoCliente__c , &apos;Pymes&apos;),
		&apos;PYMES&apos;, 
		IF 
		(
			OR ( ISPICKVAL (SegmentoCliente__c , &apos;Corporaciones&apos;), ISPICKVAL (SegmentoCliente__c , &apos;Grandes Empresas&apos;) ),
			&apos;GRANDES EMPRESAS&apos;,
			IF 
			(
				OR ( ISPICKVAL (LoB__c , &apos;Vida Riesgo Individual&apos;), ISPICKVAL (LoB__c , &apos;Vida Riesgo Colectivo&apos;)),
				&apos;VIDA RIESGO&apos;,
				&apos;RESTO&apos;
			)
		)
	)
)</formula>
    <label>Estructura Unificada</label>
    <type>Text</type>
</CustomField>