force-app/zurich-base/main/default/objects/KPI__c/fields/FechaCalculo__c.field-meta.xml
<CustomField>
    <fullName>FechaCalculo__c</fullName>
    <formula>IF (DAY(TODAY()) = 1 , DATEVALUE
(TEXT(CalcYear__c) &amp; &quot;-&quot; &amp; text(VALUE(TEXT(CalcMonth__c)) + 1) &amp; &quot;-01&quot; 
) , DATEVALUE
(TEXT(CalcYear__c) &amp; &quot;-&quot; &amp; TEXT(CalcMonth__c) &amp; &quot;-01&quot; 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha cálculo</label>
    <type>Date</type>
</CustomField>