force-app/zurich-base/main/default/objects/KPI__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <description>Ingresos totales</description>
    <inlineHelpText>Ingresos totales</inlineHelpText>
    <label>Ingresos</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>