force-app/zurich-base/main/default/objects/KPI__c/fields/InfoKpiCode__c.field-meta.xml
<CustomField>
    <fullName>InfoKpiCode__c</fullName>
    <description>SDM: campo que hace de id externo para los KPIs de un mediador</description>
    <externalId>true</externalId>
    <label>InfoKpiCode</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>