force-app/zurich-base/main/default/objects/KPI__c/fields/Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Intermediary__c</fullName>
    <label>Intermediario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>