force-app/zurich-base/main/default/objects/KPI__c/fields/LoB__c.field-meta.xml
<CustomField>
    <fullName>LoB__c</fullName>
    <label>LoB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMEs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>