force-app/zurich-base/main/default/objects/KPI__c/fields/MathematicalReserve__c.field-meta.xml
<CustomField>
    <fullName>MathematicalReserve__c</fullName>
    <description>Importe Reserva matemática</description>
    <inlineHelpText>Importe Reserva matemática</inlineHelpText>
    <label>Reserva matemática</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>