force-app/zurich-base/main/default/objects/KPI__c/fields/NCustomers__c.field-meta.xml
<CustomField>
    <fullName>NCustomers__c</fullName>
    <description>Número de clientes activos a fecha de cálculo</description>
    <inlineHelpText>Número de clientes activos a fecha de cálculo</inlineHelpText>
    <label>Clientes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>