force-app/zurich-base/main/default/objects/KPI__c/fields/PA_Cancellations__c.field-meta.xml
<CustomField>
    <fullName>PA_Cancellations__c</fullName>
    <description>Prima anulaciones periodo anterior</description>
    <inlineHelpText>Prima anulaciones periodo anterior</inlineHelpText>
    <label>Anulaciones (pa)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>