force-app/zurich-base/main/default/objects/KPI__c/fields/PA_CAYLoad__c.field-meta.xml
<CustomField>
    <fullName>PA_CAYLoad__c</fullName>
    <description>Carga siniestral CAY periodo anterior</description>
    <inlineHelpText>Carga siniestral CAY periodo anterior</inlineHelpText>
    <label>Carga CAY (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>