force-app/zurich-base/main/default/objects/KPI__c/fields/PA_Commission__c.field-meta.xml
<CustomField>
    <fullName>PA_Commission__c</fullName>
    <description>Comisión Total periodo anterior</description>
    <inlineHelpText>Comisión Total periodo anterior</inlineHelpText>
    <label>Comision (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>