force-app/zurich-base/main/default/objects/KPI__c/fields/PA_ConsolidatedRights__c.field-meta.xml
<CustomField>
    <fullName>PA_ConsolidatedRights__c</fullName>
    <description>Importe Derechos consolidados (pa)</description>
    <inlineHelpText>Importe Derechos consolidados (pa)</inlineHelpText>
    <label>Derechos consolidados (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>