force-app/zurich-base/main/default/objects/KPI__c/fields/PA_Income__c.field-meta.xml
<CustomField>
    <fullName>PA_Income__c</fullName>
    <description>Ingresos totales periodo anterior</description>
    <inlineHelpText>Ingresos totales periodo anterior</inlineHelpText>
    <label>Ingresos (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>