force-app/zurich-base/main/default/objects/KPI__c/fields/PA_MathematicalReserve__c.field-meta.xml
<CustomField>
    <fullName>PA_MathematicalReserve__c</fullName>
    <description>Importe Reserva matemática periodo anterior</description>
    <inlineHelpText>Importe Reserva matemática periodo anterior</inlineHelpText>
    <label>Reserva matemática (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>