force-app/zurich-base/main/default/objects/KPI__c/fields/PA_NCustomers__c.field-meta.xml
<CustomField>
    <fullName>PA_NCustomers__c</fullName>
    <description>Número de clientes activos a fecha de cálculo del periodo anterior</description>
    <inlineHelpText>Número de clientes activos a fecha de cálculo del periodo anterior</inlineHelpText>
    <label>Clientes (pa)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>