force-app/zurich-base/main/default/objects/KPI__c/fields/PA_PN__c.field-meta.xml
<CustomField>
    <fullName>PA_PN__c</fullName>
    <label>PN (pa)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>