force-app/zurich-base/main/default/objects/KPI__c/fields/PA_PoliciesInForce__c.field-meta.xml
<CustomField>
    <fullName>PA_PoliciesInForce__c</fullName>
    <description>Número de pólizas en vigor a fecha de cálculo del periodo anterior</description>
    <inlineHelpText>Número de pólizas en vigor a fecha de cálculo del periodo anterior</inlineHelpText>
    <label>Pólizas vigor (pa)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>