force-app/zurich-base/main/default/objects/KPI__c/fields/PA_PoliciesPN__c.field-meta.xml
<CustomField>
    <fullName>PA_PoliciesPN__c</fullName>
    <description>Número de pólizas de producción nueva periodo anterior</description>
    <inlineHelpText>Número de pólizas de producción nueva periodo anterior</inlineHelpText>
    <label>Pólizas PN (pa)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>