force-app/zurich-base/main/default/objects/KPI__c/fields/PA_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>PA_Portfolio__c</fullName>
    <description>Prima neta cartera final periodo anterior</description>
    <inlineHelpText>Prima neta cartera final periodo anterior</inlineHelpText>
    <label>Cartera (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>