force-app/zurich-base/main/default/objects/KPI__c/fields/PA_PortfolioEntry__c.field-meta.xml
<CustomField>
    <fullName>PA_PortfolioEntry__c</fullName>
    <description>Prima cartera entrada periodo anterior</description>
    <inlineHelpText>Prima cartera entrada periodo anterior</inlineHelpText>
    <label>Cartera Entrada (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>