force-app/zurich-base/main/default/objects/KPI__c/fields/PA_Supplements__c.field-meta.xml
<CustomField>
    <fullName>PA_Supplements__c</fullName>
    <description>Prima suplementos + reemplazos periodo anterior</description>
    <inlineHelpText>Prima suplementos + reemplazos periodo anterior</inlineHelpText>
    <label>Suplementos (pa)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>