force-app/zurich-base/main/default/objects/KPI__c/fields/PA_Totaldiscount__c.field-meta.xml
<CustomField>
    <fullName>PA_Totaldiscount__c</fullName>
    <description>Importe Descuento total (pa)</description>
    <inlineHelpText>Importe Descuento total (pa)</inlineHelpText>
    <label>Descuento total (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>