force-app/zurich-base/main/default/objects/KPI__c/fields/PA_TotalLoad__c.field-meta.xml
<CustomField>
    <fullName>PA_TotalLoad__c</fullName>
    <description>Carga siniestral total periodo anterior</description>
    <inlineHelpText>Carga siniestral total periodo anterior</inlineHelpText>
    <label>Carga Total (pa)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>