force-app/zurich-base/main/default/objects/KPI__c/fields/PN__c.field-meta.xml
<CustomField>
    <fullName>PN__c</fullName>
    <description>Prima producción nueva</description>
    <inlineHelpText>Prima producción nueva</inlineHelpText>
    <label>PN</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>