force-app/zurich-base/main/default/objects/KPI__c/fields/PoliciesInForce__c.field-meta.xml
<CustomField>
    <fullName>PoliciesInForce__c</fullName>
    <label>Pólizas vigor</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>