force-app/zurich-base/main/default/objects/KPI__c/fields/PoliciesPN__c.field-meta.xml
<CustomField>
    <fullName>PoliciesPN__c</fullName>
    <description>Número de pólizas de producción nueva</description>
    <inlineHelpText>Número de pólizas de producción nueva</inlineHelpText>
    <label>Pólizas PN</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>