force-app/zurich-base/main/default/objects/KPI__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <description>Prima neta cartera final</description>
    <inlineHelpText>Prima neta cartera final</inlineHelpText>
    <label>Cartera</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>