force-app/zurich-base/main/default/objects/KPI__c/fields/PortfolioEntry__c.field-meta.xml
<CustomField>
    <fullName>PortfolioEntry__c</fullName>
    <description>Prima cartera entrada</description>
    <inlineHelpText>Prima cartera entrada</inlineHelpText>
    <label>Cartera Entrada</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>