force-app/zurich-base/main/default/objects/KPI__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Agrupación de Productos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMERCIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>