force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_CancIncrease__c.field-meta.xml
<CustomField>
    <fullName>Ratio_CancIncrease__c</fullName>
    <description>Se calcula con la siguiente fórmula: (([Anulaciones] / [Anulaciones (pa)]) - 1)</description>
    <formula>( Cancellations__c  / PA_Cancellations__c ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crecimiento Anulaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>