force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_Claim__c.field-meta.xml
<CustomField>
    <fullName>Ratio_Claim__c</fullName>
    <description>Se calcula con la siguiente fórmula: ([Carga Total] / [Ingresos ])</description>
    <formula>IF(OR(ISNULL(Income__c), Income__c = 0), 0, TotalLoad__c / Income__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siniestralidad Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>