force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_ClaimCAY__c.field-meta.xml
<CustomField>
    <fullName>Ratio_ClaimCAY__c</fullName>
    <description>Se calcula con la siguiente fórmula: ([Carga CAY] / [Ingresos ])</description>
    <formula>IF(OR(ISNULL(Income__c), Income__c = 0), 0, CAYLoad__c /  Income__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siniestralidad CAY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>