force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_Commission__c.field-meta.xml
<CustomField>
    <fullName>Ratio_Commission__c</fullName>
    <description>Se calcula con la siguiente fórmula: ([Comision] / [Cartera])</description>
    <formula>Commission__c /  Portfolio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje de Comisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>