force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_PA_Claim__c.field-meta.xml
<CustomField>
    <fullName>Ratio_PA_Claim__c</fullName>
    <description>Se calcula con la siguiente fórmula: ([Carga Total (pa)] / [Ingresos (pa)])</description>
    <formula>IF(OR(ISNULL(PA_Income__c), PA_Income__c = 0), 0, PA_TotalLoad__c / PA_Income__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siniestralidad Total (pa)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>