force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_PNIncrease__c.field-meta.xml
<CustomField>
    <fullName>Ratio_PNIncrease__c</fullName>
    <description>Se calcula con la siguiente fórmula: (([PN] / [PN (pa)]) - 1)</description>
    <formula>( PN__c  / PA_PN__c ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crecimiento PN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>