force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_PortIncrease__c.field-meta.xml
<CustomField>
    <fullName>Ratio_PortIncrease__c</fullName>
    <description>Se calcula con la siguiente fórmula: (([Cartera] / [Cartera (pa)]) - 1)</description>
    <formula>( Portfolio__c / PA_Portfolio__c ) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crecimiento Cartera</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>