force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_Retention__c.field-meta.xml
<CustomField>
    <fullName>Ratio_Retention__c</fullName>
    <description>Se calcula con la siguiente fórmula: ([Cartera Renovada] / [Revised baseline])</description>
    <formula>RenewedPortfolio__c /  RevisedBaseline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio de Retención</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>