force-app/zurich-base/main/default/objects/KPI__c/fields/Ratio_TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>Ratio_TotalDiscount__c</fullName>
    <description>Se calcula con la siguiente fórmula: ([Descuento total] / [Cartera])</description>
    <formula>Totaldiscount__c /  Portfolio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>