force-app/zurich-base/main/default/objects/KPI__c/fields/RenewedPortfolio__c.field-meta.xml
<CustomField>
    <fullName>RenewedPortfolio__c</fullName>
    <description>Importe Cartera Renovada</description>
    <inlineHelpText>Importe Cartera Renovada</inlineHelpText>
    <label>Cartera Renovada</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>