force-app/zurich-base/main/default/objects/KPI__c/fields/RetentionRatio__c.field-meta.xml
<CustomField>
    <fullName>RetentionRatio__c</fullName>
    <description>Dato procedente de la integración de KPI. Mapeado con la etiqueta ratio_retencion</description>
    <label>Ratio Retención</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>