force-app/zurich-base/main/default/objects/KPI__c/fields/RevisedBaseline__c.field-meta.xml
<CustomField>
    <fullName>RevisedBaseline__c</fullName>
    <description>Revised Baseline</description>
    <inlineHelpText>Revised Baseline</inlineHelpText>
    <label>Revised Baseline</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>