force-app/zurich-base/main/default/objects/KPI__c/fields/SegmentoCliente__c.field-meta.xml
<CustomField>
    <fullName>SegmentoCliente__c</fullName>
    <label>Segmento Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>