force-app/zurich-base/main/default/objects/KPI__c/fields/Supplements__c.field-meta.xml
<CustomField>
    <fullName>Supplements__c</fullName>
    <description>Prima suplementos + reemplazos</description>
    <inlineHelpText>Prima suplementos + reemplazos</inlineHelpText>
    <label>Suplementos</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>