force-app/zurich-base/main/default/objects/KPI__c/fields/Temporalidad__c.field-meta.xml
<CustomField>
    <fullName>Temporalidad__c</fullName>
    <label>Temporalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>YTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>