force-app/zurich-base/main/default/objects/KPI__c/fields/Totaldiscount__c.field-meta.xml
<CustomField>
    <fullName>Totaldiscount__c</fullName>
    <description>Importe Descuento total</description>
    <inlineHelpText>Importe Descuento total</inlineHelpText>
    <label>Descuento total</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>