force-app/zurich-base/main/default/objects/KPI__c/fields/TotalLoad__c.field-meta.xml
<CustomField>
    <fullName>TotalLoad__c</fullName>
    <description>Carga siniestral total</description>
    <inlineHelpText>Carga siniestral total</inlineHelpText>
    <label>Carga Total</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>